# Masterarbeit

./: Dockerfile  README.md  Timetable
Cmake_franka/: CMakeLists.txt  CartesianImpedance_example.cpp  DatenLaura.py  First_ImpedanceVel.cpp  ForceControl.cpp  GetPosition.cpp  HalfCircle.cpp  HandMoveRobot.cpp  ImpedanceCartesianControl.cpp  ImpedanceControl.cpp  ImpedanceJointVel_test.cpp  ImpedanceVelControl.cpp  ImpedanceVel_test.cpp  InverseKin_test.cpp  JointImpedanceControl.cpp  JointImpedanceControl_example.cpp  JointPositions.cpp  JointPositions2.cpp  MakeshiftCode.txt  OperationalSpaceControl.cpp  OrientationControl.cpp  PlotInitForces.py  PlotLog.py  PlotThesis.py  PrintRobotState.cpp  ReadForce.cpp  TrueImpedance_test.cpp  VelImpedance_test.cpp  VertForce.cpp  Waypoints.cpp  interpolValues.txt  plotForces.py  plotSphere.py  plotSphere4Present.py  plotSphere4thesis.py  plotStuff.py  plot_diff_null.py  test_imp.cpp  tests  tests.cpp  (+3 more)
Cmake_franka/OldCode/: CartesianImpedance_example.cpp  CircleExplore.cpp  FirstImpedanceControl.cpp  ForceControl.cpp  HalfCircle.cpp  ImpedanceControl.cpp  JointPositions2.cpp  JointVelocity.cpp  OperationalSpaceControl.cpp  SetJointTorque.cpp  force_control_example.cpp
Cmake_franka/TrajectoryPlaning/: HalfCircle.py
Docker/: Dockerfile
Driver_Sensor/: CMakeLists.txt  SensorSetUp.cpp  SensorSetUp.h  sensor_cmake.cpp  serial_driver_test
Driver_Sensor/examples/: return_sensor_data.cpp
Mujoco/FirstBuild/: ChaosPendel.py  Example_actuated.py  Example_hinge.py  Example_toupie.py  Pendel.xml  Pendel_py.py
Mujoco/Franka/: FirstTryPanda.py
RoboterCode/First/: Asynchronous.py  BasicMotion_rel.py  ReadPosition.py  TestImpedanceMotion.py  WaypointMotion.py  cartesianImpedanceControl.cpp
mjctrl/: Create_video_robot.py  Impedance_copy_robot.py  Joint_copy_robot.py  MUJOCO_LOG.TXT  O_T_F.txt  copy_robot_joint.py  diffik_nullspace.py  force_data_20240725_140746.txt  fr3_impedance.py  fr3_impedance_presentation.py  fr3_nullspace_force.py  knee_sim.py  niko_impedance.py  open_viewer.py  opspace.py  output.txt  panda_ik.py  panda_knee_impedance.py  sensor_sim.py  tests_me.py
mjctrl/FTSensing/: MUJOCO_LOG.TXT  knee_model.xml  knee_model_template.xml  niko_knee_sim.py
mjctrl/FTSensing/assets/ignore_tendons/: QS.mrk.json
mjctrl/FTSensing/assets/meshes/convex_meshes/: femur_3.stl  femur_4.stl  femur_5.stl  femur_6.stl  fibula_1.stl  fibula_12.stl  fibula_13.stl  fibula_2.stl  fibula_3.stl  fibula_5.stl  (+11 more)
mjctrl/FTSensing/assets/tendons/: HKB.mrk.json  LCL.mrk.json  LP.mrk.json  POL.mrk.json  PS.mrk.json  VKB.mrk.json  dMCL.mrk.json  sMCL.mrk.json
mjctrl/FTSensing/assets/trackers/: fixpoints_tracker_tibia.mrk.json  tracker femur.mrk.json  tracker tibia.mrk.json
mjctrl/FTSensing/assets/wrap/: PS_wrap.mrk.json
mjctrl/FTSensing/config/: config.yaml  config_compose.yaml  config_gpt.yaml
mjctrl/FTSensing/config/env/: disk.yaml  disklen.yaml  hand.yaml  handpos.yaml  knee.yaml
mjctrl/FTSensing/src/: config.py  find_ethernet.py  read_eeprom.py  serial_example.py  sim_mujoco.py  utils_knee_data_collector.py
mjctrl/copy_robot/: Create_video_robot.py  Joint_copy_robot.py  plot_video_forces.py
mjctrl/franka_emika_panda/: panda_EE.xml  scene.xml
mjctrl/franka_fr3/: fr3.xml  fr3_copy_robot.xml  fr3_joint_actuator.xml  scene.xml  scene_copy_robot.xml  scene_copy_robot_presentation.xml  scene_joint_actuator.xml  scene_knee.xml  sensor_EE.xml  sensor_assets.xml
mjctrl/franka_fr3/assets/: Assembly_Sensor_V2_2.STL  Platte_SensorModel.STL  femur_cut_block.stl
mjctrl/franka_fr3/knee/: femur.xml  knee.xml  knee_assets.xml  knee_tendons.xml  tibia.xml
mjctrl/franka_fr3/knee/meshes/: femur_mirror.stl  tibia_mirror.stl
mjctrl/franka_fr3_sensor/: fr3.xml  scene.xml  sensor_EE.xml  sensor_assets.xml  sensor_tendons.xml
mjctrl/franka_fr3_sensor/assets/: Assembly_Sensor_V2.STL  Kugelgelenk_adapter_V1.STL
mjctrl/kuka_iiwa_14/: iiwa14.xml  scene.xml
(+43 files in other folders)
